--- a/style.css
+++ b/style.css
@@ -97,4 +97,16 @@
     margin-top: 10px;
     font-style: italic;
   }
+
+
+  #hover-card {
+    opacity: 0;
+    transform: scale(0.95);
+    transition: all 0.3s ease;
+  }
+  
+  #hover-card.active {
+    opacity: 1;
+    transform: scale(1);
+  }
   
