--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
     margin-bottom: 20px;
     color: #ffffff;
     text-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    font-family: "feltro-shadow-texture", sans-serif;
+font-weight: 400;
+font-style: normal;
   }
  
   p {
