--- a/style.css
+++ b/style.css
@@ -164,4 +164,14 @@ font-style: normal;
     background: #333;
   }
 
-  
+  #generated-lyric {
+    font-family: "redonda", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  p {
+    font-family: "rig-solid-bold-inline-solo", sans-serif;
+font-weight: 700;
+font-style: normal;
+  }
